# wca-odds-web

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  results.js  tailwind.config.js  testing.py  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
pkg/: odds_web.d.ts  odds_web.js  odds_web_bg.wasm  odds_web_bg.wasm.d.ts  package.json
setup/: cache_comp.js  cache_comp.ts  cache_list.json
setup/public/wcif/: NorthCarolinaChampionship2025.json  RubiksUKChampionship2025.json  WC2025.json
src/: App.vue  lib.rs  main.ts  router.ts
src/assets/: index.css
src/components/charts/: FullHistogram.vue  HistogramCustomTooltip.vue  IndividualHistogram.vue  MultiLabelSwitch.vue  PercentageTooltip.vue  PieChart.vue  RankHistogram.vue  ResultHistogram.vue
src/components/custom/: BackButton.vue  ColorModeSwitcher.vue  ColoredCircle.vue  CompetitionError.vue  CompetitionHeader.vue  CompetitorDropdown.vue  CompetitorList.vue  ControlPanel.vue  DateRangePicker.vue  Expandable.vue  ExpandableBox.vue  FMCEntryField.vue  FlagIcon.vue  LoadingMessage.vue  ResultEntryField.vue  ResultInfo.vue  ResultsSummary.vue  RotatableChevron.vue  SimulationOptions.vue  TimeEntryField.vue
src/components/ui/card/: Card.vue
src/components/ui/chart/: ChartCrosshair.vue  ChartLegend.vue  ChartSingleTooltip.vue  ChartTooltip.vue  index.ts
src/components/ui/chart-area/: AreaChart.vue
src/components/ui/chart-bar/: BarChart.vue
src/components/ui/chart-donut/: DonutChart.vue
src/components/ui/checkbox/: Checkbox.vue
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  (+7 more)
src/lib/: histogram.ts  simulation-worker.ts  simulationWorkerService.ts  types.ts  utils.ts  wcaLive.ts
src/lib/stores/: compSettings.ts
src/rust/: calc.rs  competitor.rs  data.rs  event.rs  event_simulation.rs  event_simulator.rs  histogram.rs  lib.rs  simd.rs  simulation.rs
src/types/: shims-vue.d.ts
src/views/: Competition.vue  CompetitionPage.vue  Custom.vue  CustomPage.vue  Home.vue  HomePage.vue  Simulation.vue  SimulationPage.vue  Test.vue
(+33 files in other folders)
