[package]
name = "odds-web"
version = "0.1.0"
authors = ["Nicholas McKee"]
description = "Core odds calculator for WCA competition predictor"
license = "MIT"
repository = "https://github.com/mckeenicholas/wca-odds-web"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.69"
features = [ "console" ]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
