[package]
name = "odds-web"
version = "0.1.0"
authors = ["Nicholas McKee"]
description = "Core odds calculator for WCA competition predictor"
license = "MIT"
repository = "https://github.com/mckeenicholas/wca-odds-web"
edition = "2021"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.49"
chrono = "0.4.39"
futures = "0.3.31"
web-sys = { version = "0.3.69", features = [ "console" ] }