[package]
name = "odds-web"
version = "0.1.0"
authors = ["Nicholas McKee"]
description = "Core odds calculator for WCA competition predictor"
license = "MIT"
repository = "https://github.com/mckeenicholas/wca-odds-web"
edition = "2021"

[profile.release]
# Reduces binary size by ~3% and gives a ~5% speed increase
lto = true
# Reduces binary size by another ~4%
codegen-units = 1
panic = "abort"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
reqwest = { version = "0.12.20", features = ["json"] }
wasm-bindgen-futures = "0.4.50"
chrono = "0.4.41"
futures = "0.3.31"
web-sys = { version = "0.3.77", features = [ "console" ] }